Fix formatting